--- a/profiles/templates/profiles/cards/player/fantasy_card.html
+++ b/profiles/templates/profiles/cards/player/fantasy_card.html
@@ -24,12 +24,7 @@
 
         </div>  <!-- end of card-text-->
         <div class="mt-4 text-center">
-            {% if editable %}
-                {% url 'profiles:my_fantasy' as button_url %}
-            {% else %}
-                {% url 'profiles:player_fantasy' slug=show_user.profile.slug as button_url %}
-            {% endif %}
-            {% seemore_link button_url %}
+            {% include 'profiles/partials/_see_more_fantasy.html' %}
         </div>
     </div>
 </div>
