--- a/profiles/templates/profiles/fantasy.html
+++ b/profiles/templates/profiles/fantasy.html
@@ -18,6 +18,7 @@
 
 {% block content %}
 <section id="profile-fantasy" class="profile">
+    {% include 'profiles/player_subpage_header.html' %}
 
   <div class="container" data-aos="fade-up"> 
 
