--- a/profiles/templates/profiles/player_subpage_header.html
+++ b/profiles/templates/profiles/player_subpage_header.html
@@ -10,39 +10,37 @@
 
         <div class="col-1">
             
-                <img title="profile picture" class="avatar rounded img-responsive" src="{% thumbnail user.picture|default:'default_profile.png' 'tables_avatar_show' %}">
+                <img title="profile picture" class="avatar rounded img-responsive" src="{% thumbnail show_user.picture|default:'default_profile.png' 'tables_avatar_show' %}">
             
         </div>
+
         <div class="col">
                 <div>
-                    {{ user.get_full_name.title }}
+                    {{ show_user.get_full_name.title }}
                 </div>
 
                 <div>
-                    {{ user.profile.display_team }}  ({{ user.profile.get_position_raw_display }})
+                    {{ show_user.profile.display_team }}  ({{ show_user.profile.get_position_raw_display }})
                 </div>
 
                 <div>
-                    Wiek: {{ user.profile.age }} lat
+                    Wiek: {{ show_user.profile.age }} lat
                 </div>
         </div>
         <div class="col-1 pull-right">
-            <img title="" class="avatar" src="{% thumbnail user.profile.get_team_object.picture|default:'default_team.png' 'tables_avatar_show' %}">
+            <img title="" class="avatar" src="{% thumbnail show_user.profile.get_team_object.picture|default:'default_team.png' 'tables_avatar_show' %}">
 
         </div>
     </div>
 
 
-    <div class="row">
-    Mecze kariera  Transgery.....
-    </div>
-
-        <div class="row">
-    Liga Puchar krajowe Puchary...
-    </div>
-
-
-            <div class="row">
-    tabela....
+    <div class="row p-3"> 
+        <div class="d-flex align-items-center">
+        {% include 'profiles/partials/_nav_buttons.html' %}
+        </div>
+        <div class="d-flex align-items-center">
+        {% include 'profiles/partials/_profiles_buttons.html' %}
+        </div>
     </div>
 </div> 
+<hr class="col-xs-12">
