--- a/profiles/templates/profiles/show_default_profile.html
+++ b/profiles/templates/profiles/show_default_profile.html
@@ -14,7 +14,7 @@
 
 {% block content %}  <!-- @todo frontend to be renovated to adjust template-->
 <section id="profile" class="profile">
-  <div class="container-fluid profile-container" data-aos="fade-up">
+  <div class="container profile-container" data-aos="fade-up">
       <div class="row">
         <div class="col-sm-6">{% include 'profiles/cards/_base_account_card.html' %}</div>
       </div>  <!-- end row -->
