--- a/backend/templates/partials/footer.html
+++ b/backend/templates/partials/footer.html
@@ -56,6 +56,7 @@
         &copy; Copyright <strong><span>Presento</span></strong>. All Rights Reserved
     </div>
     <div  hidden class="credits">
+    
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
@@ -69,6 +70,7 @@
       <a href="https://www.instagram.com/playmaker.pro/" class="instagram"><i class="bx bxl-instagram"></i></a>
       {% comment %} <a href="@todo" class="google-plus"><i class="bx bxl-skype"></i></a> {% endcomment %}
       <a href="https://www.linkedin.com/company/playmaker-pro/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      v{{app_version}}
     </div>
 </div>
 
