--- a/profiles/templates/profiles/requests.html
+++ b/profiles/templates/profiles/requests.html
@@ -17,7 +17,7 @@
 
 
 {% block content %}
-<section id="tables" class="tables" style="background-color:#fff;margin-top:5px">
+<section id="tables" class="tables requests" style="background-color:#fff;margin-top:5px">
   {% csrf_token %}
   <div class="container-fluid" data-aos="fade-up"> 
 
