--- a/profiles/templates/profiles/player_subpage_header_black.html
+++ b/profiles/templates/profiles/player_subpage_header_black.html
@@ -6,7 +6,7 @@
             <div class="row">
 
 
-                <div class="col-md-5">
+                <div class="col-md-8">
                     <div class="row no-gutters">
                         <div class="d-none d-md-block col-md-4">
                             <img class=" avatar rounded-circle img-responsive" title="profile picture" src="{% thumbnail show_user.picture|default:'default_profile.png' 'profile_avatar_show_mobile' %}">
@@ -16,12 +16,12 @@
                         </div>
 
                         <div class="col-6">
-                            <h1 class="d-none d-md-block" style="color:#fff;">{{ show_user.get_full_name.upper }}</h1>
-                            <div class="text-muted" >
-                                <strong style="color:#fff;"> {{ show_user.profile.history.counter }} </strong> {% trans 'wizyt' %}
+                            <h1 class="d-none d-md-block player-name" style="color:#fff;">{{ show_user.get_full_name.upper }}</h1>
+                            <div class="text-muted acc-info" >
+                                <strong style="color:#fff;" > {{ show_user.profile.history.counter }} </strong> {% trans 'wizyt' %}
                             </div>  
-                            <div class="text-muted">
-                                <strong style="color:#fff;"> {{ show_user.follower_set.count }} </strong> {% trans 'obserwujących' %}
+                            <div class="text-muted  ">
+                                <strong class="acc-info" style="color:#fff;"> {{ show_user.follower_set.count }} </strong> {% trans 'obserwujących' %}
                             </div> 
                             {% if not editable %}
                             <h4 class="d-md-none d-inline card-subtitle mb-2 text-muted"><i class="icofont-boot-alt-2" style="color:#fff;"></i> {{ show_user.get_declared_role_display|upper }}  </h4>
@@ -32,9 +32,9 @@
                     </div>
                 </div>
 
-                <div class="col-md-7">
+                <div class="col-md-4">
                     <div class="row">
-                         <h1 class=" d-md-none pl-3" style="color:#fff;">{{ show_user.get_full_name.upper }}</h1>
+                         <h1 class=" d-md-none pl-3 player-name" style="color:#fff;">{{ show_user.get_full_name.upper }}</h1>
                         
                         
       
