--- a/profiles/templates/profiles/cards/player/fantasy_card.html
+++ b/profiles/templates/profiles/cards/player/fantasy_card.html
@@ -10,7 +10,7 @@
         
             <div class="text-center mt-4">
                 <div class="col-3 border-right">
-                    <div class="h4 font-weight-bold mb-0">{{ fantasy.score}}ptk.</div>
+                    <div class="h4 font-weight-bold mb-0">{{ fantasy.score}}pkt.</div>
                     <span class="small text-gray">{{ fantasy.position }}</span>
                 </div>
             </div>
