--- a/profiles/templates/profiles/fantasy.html
+++ b/profiles/templates/profiles/fantasy.html
@@ -29,7 +29,7 @@
            
             <ul>
                 {% for score in match.scores %}
-                <li><span class="badge badge-primary badge-pill">+{{score.score}}</span>ptk <span class="small">{{score.reason}}</span> </li>
+                <li><span class="badge badge-primary badge-pill">+{{score.score}}</span>pkt <span class="small">{{score.reason}}</span> </li>
                 {% endfor %}
             </ul>
         </li>
