--- a/profiles/templates/profiles/show_player_profile.html
+++ b/profiles/templates/profiles/show_player_profile.html
@@ -22,7 +22,7 @@
 
 {% include 'profiles/player_subpage_header_black.html' %}
 
-<section id="profile" class="profile  mt-5 mt-md-0">
+<section id="profile" class="profile">
   <div class="container profile-container" data-aos="fade-up">
       
       <div class="row">
