--- a/soccerbase/templates/soccerbase/tables/filters_desktop_teams.html
+++ b/soccerbase/templates/soccerbase/tables/filters_desktop_teams.html
@@ -7,9 +7,9 @@
 
 
 
-    <div class="col-4 col-md-1 filter ml-1"> 
+    {% comment %} <div class="col-4 col-md-1 filter ml-1"> 
         {% include 'soccerbase/tables/filters/filter_input_club_name.html'  with size=120  %}
-    </div>
+    </div> {% endcomment %}
 
     <div class="col-4 col-md-1 filter ml-1"> 
         {% include 'soccerbase/tables/filters/filter_input_team_name.html'  with size=120  %}
