--- a/profiles/templates/profiles/cards/player/latest_games_card.html
+++ b/profiles/templates/profiles/cards/player/latest_games_card.html
@@ -1,12 +1,9 @@
 {% load i18n %}
 {% load playmaker %}
-
-
-<div class="card">
-    <div class="card-body ">
+<div class="card last-game-card">
+    <div class="card-body">
         <h2 class="card-title">{% trans "Ostatnie mecze"%}</h2>
-        <h6 class="card-subtitle mb-2 text-muted"></h6>
-        <div class="card-text text-center">
+        <div class="card-text">
             {% if last_games %}
                 {% include 'profiles/tables/_game_table.html' with short=True games=last_games user=show_user %}
             {% else %}
@@ -14,11 +11,7 @@
                   {% trans 'Brak danych dla obecnego sezonu' %}  
                   <h1 style="font-size:75px;"><i class="icofont-table"></i></h1>
                 </span>
-
             {% endif %}
-
-
-            
         </div>
         <div class="mt-4 text-center">
             {% include 'profiles/partials/_see_more_games.html' %}
