--- a/profiles/templates/profiles/fantasy2.html
+++ b/profiles/templates/profiles/fantasy2.html
@@ -27,15 +27,13 @@
 
 <div class="row">
             <div class="col-lg-7 mx-auto">
-                    {% if fantasy is None or not fantasy.data  %}
-                     
-                        {% include 'platform/partials/_empty.html' %}
-                           
-                        <h4>Przygotwoujemy statystyki dla Twojego konta.</h4>
-                        <p>Uzupełnienie w całości Twojego piłkarskiego profilu pozwoli nam sporządzić odpowiednie metryki.</p>
-                    {% endif%}
+                    {% if page_obj is None or not page_obj.data  %}
+                    <div class="col-md-12 text-center">
+                        {% include 'profiles/partials/_empty_metrics.html' %}
+                    </div>
+                    {% endif %}
 
-                {% for game in fantasy.data %}
+                {% for game in page_obj.data %}
                 <!-- Timeline -->
                 <ul class="timeline">
                     <h5> {{game.game_header}}</h5>
@@ -44,7 +42,7 @@
                     <li class="timeline-item bg-white rounded m-2 p-3 shadow">
                         <div class="timeline-arrow"></div>
                         <h2 class="h5 mb-0"></h2>
-                        <span class="badge badge-success">+{{ score.score }}ptk</span> {{ score.reason}}
+                        <span class="badge badge-success">+{{ score.score }}pkt</span> {{ score.reason}}
          
                     </li>
 
