--- a/soccerbase/templates/soccerbase/tables/filters_modal_coaches.html
+++ b/soccerbase/templates/soccerbase/tables/filters_modal_coaches.html
@@ -8,9 +8,9 @@
         {% include 'soccerbase/tables/filters/filter_firstlastname_input.html' with size=220  %}
     </div>
 
-    <div class="col-12 col-md-1 filter p-2"> 
+    {% comment %} <div class="col-12 col-md-1 filter p-2"> 
         {% include 'soccerbase/tables/filters/filter_input_club_name.html'  with size=220  %}
-    </div>
+    </div> {% endcomment %}
 
     <div class="col-12 col-md-1 filter p-2"> 
         {% include 'soccerbase/tables/filters/filter_input_team_name.html'  with size=220  %}
