--- a/soccerbase/templates/soccerbase/tables/filters_modal_teams.html
+++ b/soccerbase/templates/soccerbase/tables/filters_modal_teams.html
@@ -7,10 +7,10 @@
     <div class="col-12 col-md-1 filter p-2"> 
         {% include 'soccerbase/tables/filters/filter_input_team_name.html'  with size=220  %}
     </div>
-    
+{% comment %}     
     <div class="col-12 col-md-1 filter p-2"> 
         {% include 'soccerbase/tables/filters/filter_input_club_name.html'  with size=220  %}
-    </div>
+    </div> {% endcomment %}
 
 
     <div class="col-12 col-md-1 filter p-2"> 
